--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -2,6 +2,10 @@ body{
   font-family:Arial, Helvetica, sans-serif
 }
 
+p {
+  font-weight: 800;
+}
+
 .para.small-para {
   color: hsl(0, 0%, 0%);
   font-weight: 800;
