--- a/flex/01-flex-center/style.css
+++ b/flex/01-flex-center/style.css
@@ -1,8 +1,13 @@
+/* Remember,make sure you are telling CSS you want to use flex for your items and containers!*/
+
 .container {
   background: dodgerblue;
   border: 4px solid midnightblue;
   width: 400px;
   height: 300px;
+  display:flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .box {
@@ -12,4 +17,5 @@
   border: 6px solid maroon;
   width: 80px;
   height: 80px;
+  
 }
